datablock.tf
provider "aws" {
    profile = "myaws"
    region = "us-east-1"
}


data "aws_subnet" "subnet" {
    id = "subnet-07.."    # exit in aws console or generated by other terraform code
}



resource "aws_network_interface" "test" {
    subnet_id =  data.aws_subnet.subnet.id
    private_ips = [ "172.23.10.131","172.23.10.232" ]  
}

resource "aws_instance" "foo" {
  ami = "ami-05fa00d4c63e32376" #us-east-1
  instance_type = "t2.micro"


 network_interface {
    network_interface_id = aws_network_interface.test.id
    device_index = 0
 }

  tags = {
    Name = "ec2_demo"
  }
}
